# sanskrit_etymology

./: .gitignore  .mcp.json  CLAUDE.md  README.md  pyproject.toml
.claude/skills/buddhist-term-mapper/: SKILL.md
.claude/skills/corpus-ingest-tei/: SKILL.md
.claude/skills/philology-presentation-writer/: SKILL.md
.claude/skills/sanskrit-term-breakdown/: SKILL.md
.claude/skills/source-discipline/: SKILL.md
.github/workflows/: pages.yml
data/: demo_terms.json  presentation_slides.yaml  seed_terms.yaml
data/analyses/: term_analyses.yaml
data/mappings/: sanskrit_chinese_mappings.yaml
demo/: generate_all_terms.py  index.html  server.py  terms.json  terms_inline.js
demo/assets/: app.js  styles.css
docs/: SETUP.md  analysis_batch_01.md  analysis_batch_02.md  analysis_batch_03.md  final_case_studies.md  final_methodology.md  final_paper_draft.md  final_presentation.pptx  final_presentation_outline.md  final_presentation_script.md  mapping_stage_01.md  output_schema.md  seed_terms.md
src/sanskrit_etymology/: __init__.py  cli.py  demo.py  models.py  paths.py  repository.py  validation.py
src/utils/: generate_pptx.py
tests/: test_pipeline.py
